--- a/includes/scripts/power/aim3/power-calcs-ind-assoc.Rmd
+++ b/includes/scripts/power/aim3/power-calcs-ind-assoc.Rmd
@@ -13,10 +13,16 @@ output:
     pandoc_args: [ 
       "--filter", "C:/Python27/Scripts/pandoc-eqnos.exe" 
     ]
+nocite: | 
+  @below_meta-analysis_2016, @elbers_gene-centric_2012, @ko_amerindian-specific_2014, @teslovich_biological_2010, @weissglas-volkov_genomic_2013, @willer_discovery_2013, @zubair_fine-mapping_2016, @tada_multiple_2014, @wu_trans-ethnic_2013, @graff_genetic_2017
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, results="hide")
+knitr::opts_chunk$set(fig.width=12, fig.height=8,
+                      echo=F, warning=FALSE,
+                      message=T, 
+                      results='hide',
+                      comment=NA)
 
 library(knitr)
 library(plyr)
@@ -52,147 +58,42 @@ $$\lambda = N \times \frac{\beta^2 Var(X)}{\sigma_{\epsilon}^2}$$
 
 Next, we used the NCP, $\lambda$, in a 1 df chi-square test for equality of means. We made the plots below to examine power across different levels of MAF, standard deviation of the trait and varying $\beta_1$ values all based on the SNPs listed in Appendix A of my dissertation proposal.
 
+
 # MAF source
 
-To get minor allele frequencies for the AMR populuation in 1000 genomes, used the SPSmart online program [@_spsmart_2016] to input the list of appendix A snps.
+Use estimated MAF from the source studies.
 
-## SPSmart online resource.
-
-1. Enter snps from appendix A into SPS online resource  [here](http://spsmart.cesga.es/)
-2. Select '1000 Genomes Phase I May 2011'
-3. Do 'metasearch'
-4. Download SNP frequencies for 'America' group.
-
-<!--
-
-### Entry of SNPS
-
-![snps](..\table-data\spsmart-maf\spsmart-screen4.png)
-
-### Some results
-
-![snps](..\table-data\spsmart-maf\spsmart-screen3.png)
-
-### More results
-
-![snps](..\table-data\spsmart-maf\spsmart-screen2.png)
--->
-
-### SNPs from Appendix A
-
-Note: if beta were in mg/dL they were converted to mmol/L for power calcs below
-
-```{r, results='markup', eval=FALSE}
-
-# read in snps from appendix a and get beta
-# at ~\Documents\dissertation\unc-dissertation-markdown\includes\table-data
-
-appa.snps = read_excel("~/GitHub/unc-dissertation-markdown/includes/table-data/Copy of Full_list_lipids_known_loci_02102017-annotated.xlsx")
-#head(appa.snps)
-
-appa.snps = appa.snps[appa.snps$significance=="gw_sig",] # only genome-wide significant
-col.num1 = which(colnames(appa.snps) %in% "Beta (SE)")
-colnames(appa.snps)[col.num1] = "beta"
-
-table(appa.snps$Author)
-head(appa.snps)
-
-appa.snps = within(appa.snps, {
-  EAF = round(as.numeric(EAF), 3)
-  beta = round(as.numeric(beta), 5)
-#  beta = ifelse(Author %in% c("Teslovich", "Willer", "Tada"), 1/beta, beta )
-  beta = ifelse(beta.units=="mg", beta/18, beta) # convert mg/dl to mmol/l
-})
-
-# TO DO: ask Misa about the inverse transform of the coefficients. why? and 
-# for my power calcs is it ok for me to convert back by taking inverse of beta?
-head(appa.snps)
-
-kable(appa.snps[,c("rsid", "Effect allele", "EAF", "beta", "Chr")])
-#write.csv(appa.snps[,c("snp2")], file='../table-data/snps-for-spsmart.csv')
-```
-
-```{r, results='markup'}
-
-# read in snps from appendix a and get beta
-# this list of snps has evolved and now includes snps from HL population
-# changes here from the prior chunk reflect this situation
+```{r}
+# read in maf from source studies. See create-list-snps-for-vcf.R
+# at ~\GitHub\unc-dissertation-markdown-p2\includes\scripts\paper3\longleaf
 
 setwd("~/GitHub/unc-dissertation-markdown-p2/includes/scripts/paper3/longleaf/")
-load(file="vars.Rdata") # has following data frames: df1, df.allele, out.1, out.2, tot.rsid
+load(file="vars.Rdata") # has df.allele data frame with 75 unique rsid of 79 total from Hispanic only list of variants and 208 unique rsid from 252 total European generalized. Total of 179 unique rsid from 211 total rsid on concatenation of both of those data sources.
 
-# df.allele has  beta and effect allele from create-list-snps-for-vcf.R
-# has snps from both HL and European snps that generalize to HL population.
+names(df.allele) # subset this data frame to a unique combination of rsid, trait (hdl, ldl or tg)
+# and use the beta and maf from sol/hchs for power calcs below.
 
-# note: non-hl snps that generalize have betas that are inverse normal transformed 
-# for Tada, Willer and TEslovich
-# TO DO: need to get effect sizes for Tada and Willer so I can add to snp list
+sapply(df.allele, class)
+df.allele$`Beta (SE)` = as.numeric(as.character(df.allele$`Beta (SE)`))
+df.allele$power.beta = ifelse(df.allele$eur==1, df.allele$beta.sol, df.allele$`Beta (SE)`)
+summary(df.allele$power.beta)
 
-# see notes in 'Supplementary Table S6', etc... in "Copy of SOL_Lipids_Suppl_Tables_061617.xlsx". I only have effect sizes for Teslovich (n=61) so will look at at those snps for now.
-#file at "~/GitHub/unc-dissertation-markdown/includes/table-data/teslovich-snps.xlsx"
+df.allele$EAF = as.numeric(as.character(df.allele$EAF))
+df.allele$power.eaf = ifelse(df.allele$eur==1, df.allele$eaf.sol, df.allele$EAF)
+summary(df.allele$power.eaf) # 17 missing an allele frequency... THey are from the Hispanic only samples, and these will be omitted from snp list since I don't have their eaf
 
-# untransformed Teslovich effect sizes
-setwd("~/GitHub/unc-dissertation-markdown/includes/table-data/")
-tes = read.csv(file="teslovich-snps.csv", header=T)
-head(tes)
+# missing info
+missing.eaf = df.allele[is.na(df.allele$power.eaf)==T,]$rsid
+missing.eaf
 
-colnames(df.allele)
-appa.snps. = df.allele[c("rsid", "Effect allele", "EAF", "Beta (SE)", "Chr", "Trait", 
-                        "Author", "beta.units", "significance", "eur")]
-head(appa.snps.)
-colnames(appa.snps.)
-colnames(tes)
-
-# make a unique identifier for the hl and other snps
-appa.snps.$id = with(appa.snps., paste0(rsid, "-", Trait)); head(appa.snps.$id)
-tes$id = with(tes, paste0(Lead.SNP, "-", Lead.trait)); head(tes$id)
-
-# change beta from inverse normal transformed for the TEslovich to untransformed values
-appa.snps = merge(appa.snps.,
-                  tes[c("Lead.SNP", "Effect.size", "Lead.trait", "id")],
-                  by = 'id',
-                  all.x=T)
-
-table(appa.snps$Author)
-nrow(appa.snps)
-appa.snps = unique(appa.snps)
-nrow(appa.snps)
-appa.snps[1:20, c("rsid", "Author", "Beta (SE)", "Effect.size", "Trait", "eur")]
-
-head(df.allele[df.allele$Author=="Teslovich", c("rsid", "Trait", "Beta (SE)")])
-table(appa.snps$eur)
-
-appa.snps$beta. = ifelse(appa.snps$eur==1,
-                         appa.snps$Effect.size,
-                         ifelse(appa.snps$eur==0,
-                                appa.snps$"Beta (SE)", NA)) # if HL snps then units not transformed, 
-# if Eur snps that generalize then they need origin values in original units -- only have Teslovich for now...
-
-head(appa.snps)
-
-# colnames(appa.snps)[4] = "beta"
-appa.snps$beta = as.numeric(as.character(appa.snps$beta.))
-class(appa.snps$beta) # check
-summary(appa.snps$beta)
-
-# Now either the effect size is missing if non-HL and not Teslovich or
-# has no transformation (so I can do power calcs)
-appa.snps$beta = ifelse(appa.snps$beta.units=="mg", 
-                        appa.snps$beta/18, appa.snps$beta) # convert mg/dl to mmol/l -- my power calcs are in mmol
-
-appa.snps = appa.snps[!(is.na(appa.snps$beta)==T),] # take out any rows with missing effects
-head(appa.snps)
-table(appa.snps$Author)
-
-#kable(appa.snps)
-write.csv(appa.snps[,c("rsid")],
-          file='~/GitHub/unc-dissertation-markdown/includes/table-data/snps-for-spsmart-rev.csv')
+table(missing.eaf %in% eur.dat.df$rsid) # 3 are in the european sample so those will be included.
 
 ```
+
 
 ### MAF from 1000 G AMR population for selected snps above
 
-Exported .csv file from 1000 genomes AMR population contains minor allele frequencies for these snps. Will use these MAF in the power calculations below.
+Exported .csv file from 1000 genomes AMR population contains minor allele frequencies for these snps.
 
 
 ```{r}
@@ -210,121 +111,262 @@ dim(maf.amr) # original list of snps was 117 -- this has 107, missing 10.
 ```{r, results='markup'}
 select.c = colnames(maf.amr) %in% c("SNP", "N", "MA", "MAF")
 
-kable(maf.amr[select.c],
+knitr::kable(maf.amr[select.c],
       row.names = F)
 ```
 
-# Calculations
+# Power calculations
 
 SNPs from Appendix A will make up the weighted genetic risk score, and will also be the SNPs for individual variant tests.
 
-The following information will assess which of these SNPs have enough power to detect a difference in the SLCS sample assuming a
+The following information will assess which of these SNPs have enough power to detect a difference in the SLCS sample assuming:
 
 1) n=500, 
-2) effect sizes from studies listed in Appendix A from proposal
+2) effect sizes from studies listed above
 3) standard deviation of the lipid outcomes from the SLCS sample.
 
+
+
+```{r}
 ## List of SNPS and their effect sizes selected for each trait in Appendix A in proposal
+sum(table(df.allele$Trait)) # 252
+```
 
 ```{r}
 
-#appa.snps[appa.snps$Trait=="HDL" & appa.snps$rsid=="rs247617",] # checking
+names(df.allele)
+maf = df.allele[is.na(df.allele$power.eaf)==F,
+                c( "Trait", "Author",  "rsid", "power.beta", "power.eaf",
+                  "Effect allele", "Other allele", "Chr", "eur")]
+nrow(maf) # 235 left from 252 snps after omitting snps with missing eaf
+all.snps = maf
 
-# get list of snps by trait (Appendix A)
-head(appa.snps)
-dim(appa.snps)
-hdl.snps = appa.snps[appa.snps$Trait=="HDL", "rsid"]
-ldl.snps = appa.snps[appa.snps$Trait=="LDL", "rsid"]
-tg.snps = appa.snps[appa.snps$Trait=="TG", "rsid"]
+# write to a file for later use -- for example, m3 table 4
+setwd("~/GitHub/unc-dissertation-markdown-p2/includes/scripts/paper3")
+save(all.snps, file="all-snps.Rdata") # snp.sig has the 10 snps for further analysis and sort. has the full list of snps for risk scores.
+
+```
+
+```{r}
+# get list of snps by trait
+
+hdl.snps = maf[maf$Trait=="HDL", "rsid"]
+ldl.snps = maf[maf$Trait=="LDL", "rsid"]
+tg.snps = maf[maf$Trait=="TG", "rsid"]
 #tc.snps = appa.snps[appa.snps$trait=="tc", "snp2"] # no tc in buscot
 ```
 
+
+```{r}
 ### HDL
-```{r, results='markup'}
-  hdl.snps
+hdl.snps
 ```
 
+```{r}
 ### LDL
-```{r, results='markup'}
+
   ldl.snps
 ```
 
+```{r}
 ### TG
-```{r, results='markup'}
   tg.snps
 ```
 
 
-## Comparison of MAF from 1000 genome AMR population (CLM and MXL) and app A
+# Initial list of SNPs sorted by trait and Author
+
+<!-- Notes for power calcs:
+
+1) Keep? Below (DOI: 10.1038/srep19429): beta indicate the association between adjusted inverse normal transformed residuals of quantitative trait and genetic marker (SNP). Inverse normal transformation is the Z-scores for percentile distribution of the quantitative lipid trait (qnorm). 
+
+Transform: Try to run intercept only regression and do inverse normal transform on residuals (qnorm). then get sd of that estimate (they are all 1)
+
+2) KEEP: Elbers (doi:10.1371/journal.pone.0050198): additive genetic model with quantitative trait. Can keep for power analyses.
+
+Transform: none needed.
+
+3) partially OMIT: Ko (DOI: 10.1038/ncomms4983): binary TGs status with logistic regression using an additive genetic model, including age, sex and BMI as covariates to control for their potential confounding effects on serum TGs at the allele screen step. For the quantitative CPAS-GWAS analysis of HDLC and TC levels, HDLC and TC levels were first log-transformed to approximate normal distribution, and multiple linear regression was used.
+
+Transform: Use the HDL and LDL Ko results by log transforming the lipid traits and getting their sd, but omit TG, which was binary.
+
+4) (OMIT) Tada: unclear how association analyses were done so omit
+
+**5) (KEEP) Teslovich: Numbers in ‘Effect size’ column are in mg/dl for the lead trait, Modelled as an additive effect of the minor allele.
+
+Transform: none needed
+
+6) (OMIT): Weissglas-Volkov (oi:10.1136/jmedgenet-2012-101461) units for 'effect size represents the odds ratio (the 95% CI) of each copy of the minor allele for the TG affection status and the proportion of 1 SD change (SE) for each copy of the minor allele for the continuous HDL-C levels' 
+
+Can't use the result from this study for power calcs because I use an additive value.
+
+7) Willer: Effect sizes are given with respect to the minor allele (A1) in s.d.
+
+Transform: Get Z-scores for lipid traits, find the sd of that measure (by default 1) and use that in power calcs.
+
+8) Wu: effect size from an additive model and corresponding to the effect allele, in the unit of mmol/L for HDL-C, LDL-C and natural log transformed TG.
+
+Transform: Divide the lipid traits by 18 since they are given in mg/dL
+
+9) (Keep) Zubair: we applied multiple linear
+regression models and assumed an additive mode of inheritance
+to test for the association between genotypes and continuous
+HDL-C, LDL-C, or natural log-transformed triglyceride
+levels
+
+Transform: none needed
+-->
 
 ```{r, results="markup"}
-# Merge 2 data frames together
-
-#head(appa.snps)
-colnames(appa.snps)
-b.snps = appa.snps[,c("rsid", "Effect allele", "beta", "Author", "Trait")]
-head(b.snps)
-table(b.snps$Author)
-head(b.snps[b.snps$Author=="Teslovich",])
-#colnames(b.snps)
-
-# redo amr data
-#head(maf.amr)
-maf.amr2 = maf.amr[c("SNP", "MAF", "reference")]
-colnames(maf.amr2) = c("rsid", "EAF", "Effect allele")
-head(maf.amr2)
-
-#head(maf.amr2)
-
-# merge appa and amr by snp id
-maf = merge(b.snps, maf.amr2, by="rsid", all.x=T)
-
-colnames(maf)
-#head(maf)
-
-colnames(maf) = c("rsid", "allele.appa", "beta", "Author", "trait", "maf.amr", "allele.amr")
-#maf$EAF.appa = round(as.numeric(maf$EAF.appa),4)
-#head(maf)
-
-kable(maf)
+sort. = maf[order(maf$Trait, maf$Author),]
+rownames(sort.) = 1:nrow(maf)
+colnames(sort.) = c("Trait", "Author", "rsid",
+                    "Beta", "EAF", "Effect allele", "Other allele",
+                    "Chr", "generalize to Eur.")
+kable(sort.)
 ```
 
+
+```{r}
+# read in lipid values from final sample (n=596)
+setwd("~/")
+# read in data from descriptive_statistics.Rmd
+load("merged-data.Rdata") # has merge1 data frame
+names(merge2)
+dim(merge2)
+
+sub.vars = c("ID",
+             "LDLChlstrl", "HDLchlstrl", "trg.mg.dL.")
+lvars = merge2[sub.vars]
+names(lvars) = c("id", "ldl", "hdl", "tg")
+summary(lvars)
+lvars$log.tg = log(lvars$tg)
+
+# do different transformations as listed above to get appropriate lipid sd for each 
+# study
+
+# 1) inverse normal transformation of residuals
+
+transforms.f = function(x) {
+  # x = lvars$ldl # debug
+
+  # see https://www.biostars.org/p/80597/
+  # and https://www.nature.com/articles/nature11401
+  inv.norm.value = qnorm((rank(x,na.last="keep")-0.5)/sum(!is.na(x)))
+  mean(inv.norm.value) #  = 0
+  sd(inv.norm.value) # = 1
+  
+  log.t = log(x)
+  
+  z.score = scale(x, center=T, scale=T)
+  
+  mmol.t = x/18
+  
+  no.t = x
+  
+  return(data.frame(inv.norm = inv.norm.value,
+                    log.t = log.t,
+                    z.score = z.score,
+                    mmol.t = mmol.t,
+                    no.t = no.t))
+}
+
+
+# LDL
+# sd for transforms: inv.norm, log.t, z.score, mmol.t, no.t
+sapply(transforms.f(lvars$ldl), sd) # 1, 0.26, 1, 1.3, 23.3
+
+# HDL
+# sd for transforms: inv.norm, log.t, z.score, mmol.t, no.t
+sapply(transforms.f(lvars$hdl), sd) # 1, 0.26, 1, 0.586, 10.55
+
+# log TG
+# sd for transforms: inv.norm, log.t, z.score, mmol.t, no.t
+sapply(transforms.f(lvars$log.tg), sd) # 1, 0.09, 1, 0.023, 0.4187 
+
+```
 
 ```{r}
 
 # Look at sd for lipid traits (in mg/dl) in SLCS sample
 # ---------------------------------------
 phendat = read.csv(file = "~/../Dropbox/unc.grad.school/my-papers/ms-201608-1/programs/kure-analysis/phendat.csv")
+dim(phendat) # 546 by 9
+
 head(phendat)
+summary(phendat)
 sapply(phendat[,4:7], function(x) sd(x, na.rm=T))
 
-# Get variables to use for power calcs
+
+# =======================================
 
 maf = within(maf, {
   
+  maf = ifelse(power.eaf>0.5, 1-power.eaf, power.eaf) 
   snp = as.character(rsid)
   
   # set sd -------------------------
+  # Transform lipid traits as noted above to get appropriate sd to match the effect sizes from the studies
+  # values from transforms.f function above.
   
-  sd.hdl = 0.6 # sd approximation based on slcs sample (https://avonholle.github.io/ms-201608-1/chile-slides-201612.html#(10))
-#  sd.hdl = 0.2 # sd approximation based on Tikkanen 2011 estimates for hdl, 18 years, table 1
-  sd.ldl = 1.3 # sd approximation based on slcs sample
-  #maf.2$sd.ldl = 0.8 # sd approximation based on Tikkanen 2011 estimates for hdl, 18 years, table 1
-  sd.tg = 2.3 # sd approximation based on slcs
-  #maf.2$sd.tg = 0.4 # sd approximation based on Tikkanen 2011 estimates for hdl, 18 years, table 1
-  sd.tc = 1.4 # sd approx based on slcs sample
+# HDL
+# sd for transforms: inv.norm, log.t, z.score, mmol.t, no.t
+#sapply(transforms.f(lvars$hdl), sd) # 1, 0.26, 1, 0.586, 10.55
 
-  # set variance based on maf from 1000 g AMR
-  var = 2*maf.amr*(1-maf.amr)
+  sd.hdl = ifelse(Author %in% c("Below", "Below JE"), 1, # inverse normal transform
+                ifelse(Author %in% c("Elbers et al"), 10.55, # no transform
+                       ifelse(Author %in% c("Ko"), 0.2623186, # log(trait)
+                              ifelse(Author %in% c("Tada"), NA, # not clear, omit
+                                     ifelse(Author %in% c("Teslovich"), 10.554, # no transform
+                                            ifelse(Author %in% c("Weissglas-Volkov", "Weissglas-Volkov D"), NA, # OR, omit
+                                                   ifelse(Author %in% c("Willer"), 1, # Z-scores
+                                                          ifelse(Author %in% c("Wu"), 0.586338, # mmol/L
+                                                                 ifelse(Author %in% c("Zubair"), 10.554, NA))))))))) # no transform
+  
+# LDL
+# sd for transforms: inv.norm, log.t, z.score, mmol.t, no.t
+#sapply(transforms.f(lvars$ldl), sd) # 1, 0.26, 1, 1.3, 23.3
+
+sd.ldl = ifelse(Author %in% c("Below", "Below JE"), 1, # inverse normal transform
+                ifelse(Author %in% c("Elbers et al"), 23.30, # no transform
+                       ifelse(Author %in% c("Ko"), 0.2553384, # log(trait)
+                              ifelse(Author %in% c("Tada"), NA, # not clear, omit
+                                     ifelse(Author %in% c("Teslovich"), 23.30, # no transform
+                                            ifelse(Author %in% c("Weissglas-Volkov", "Weissglas-Volkov D"), NA, # OR, omit
+                                                   ifelse(Author %in% c("Willer"), 1, # Z-scores
+                                                          ifelse(Author %in% c("Wu"), 1.29464, # mmol/L
+                                                                 ifelse(Author %in% c("Zubair"), 23.30, NA))))))))) # no transform
+
+
+# log TG
+# sd for transforms: inv.norm, log.t, z.score, mmol.t, no.t
+#sapply(transforms.f(lvars$log.tg), sd) # 1, 0.09, 1, 0.023, 0.4187 
+#sapply(transforms.f(log(lvars$tg/18)), sd) # 1, 0.28677, 1, 0.02326, 0.41874383 # log(mmol/dL) convert from mg/dL to mmol/L by divide by 18
+
+sd.tg = ifelse(Author %in% c("Below", "Below JE"), 1, # inverse normal transform
+                ifelse(Author %in% c("Elbers et al"), 0.41874383, # no transform
+                       ifelse(Author %in% c("Ko"), NA, # omit
+                              ifelse(Author %in% c("Tada"), NA, # not clear, omit
+                                     ifelse(Author %in% c("Teslovich"), 0.41874383, # no transform
+                                            ifelse(Author %in% c("Weissglas-Volkov", "Weissglas-Volkov D"), NA, # OR, omit
+                                                   ifelse(Author %in% c("Willer"), 1, # Z-scores
+                                                          ifelse(Author %in% c("Wu"), 0.41874383, # mmol/L (assuming standardized)
+                                                                 ifelse(Author %in% c("Zubair"), 0.41874383, NA))))))))) # no transform
+
+ # ==========================
+
+  # set variance based on maf 
+  var = 2*maf*(1-maf)
   
   # set effect size to one from app A
   # for a change in lipid (mg/dL) for a one unit change
   # in additive model
-  es = as.numeric(as.character(beta))
-  
+
+  es = as.numeric(as.character(power.beta))
+
   # set h2 for hdl
   h2.hdl = (es^2)*var/(sd.hdl^2)
-    
+     
   # set h2 for ldl
   h2.ldl = (es^2)*var/(sd.ldl^2)
 
@@ -332,7 +374,7 @@ maf = within(maf, {
   h2.tg = (es^2)*var/(sd.tg^2)
   
   # set h2 for tc
-  h2.tc = (es^2)*var/(sd.tc^2)
+#  h2.tc = (es^2)*var/(sd.tc^2)
   
   threshold = qchisq(0.05, df=1, lower.tail=F)
   
@@ -345,56 +387,81 @@ maf = within(maf, {
   pwr.tg = pchisq(threshold, df=1,lower.tail=F,
                    ncp = 500*h2.tg)
   
-  pwr.tc = pchisq(threshold, df=1,lower.tail=F,
-                   ncp = 500*h2.tc)
+#  pwr.tc = pchisq(threshold, df=1,lower.tail=F, ncp = 500*h2.tc)
 })
 
-head(maf)
-colnames(maf)
 
-sub=maf[c("rsid", "Author", "trait", 'beta',  'maf.amr', 'pwr.hdl', 'pwr.ldl', 'pwr.tg')]
-table(sub$Author)
-head(sub[sub$Author=="Ko A",])
 
 ```
 
-# SNPS with power > 0.8
+
+```{r}
+head(maf)
+
+head(maf[maf$Author=="Wu" & maf$Trait=="TG",]) # check TG results
+
+colnames(maf)
+
+maf[maf$Author=="Wu",]
+
+sub = maf[c("rsid", "Author", "Trait", 'power.beta',  'power.eaf', 'maf',
+            'pwr.hdl', 'pwr.ldl', 'pwr.tg', "Effect allele", "Other allele", "Chr", "eur")]
+table(sub$Author)
+head(sub[sub$Author=="Wu",])
+
+```
+
+# SNPS with power > 0.8 to detect a main effect for relevant lipid traits in SLS sample
 
 **NOTE**: All beta below are in mmol/L units.
 
+
 ## HDL-related SNPS
+
+
 ```{r, results='markup'}
 # any power estimates exceeding 0.9 (by trait specific effect)?
-kable(sub[sub$rsid %in% hdl.snps & sub$pwr.hdl>0.8 & !(is.na(sub$pwr.hdl)),
-          !(colnames(sub) %in% c("pwr.ldl",'pwr.tg'))]
-      )
+kable(sub[sub$rsid %in% hdl.snps & (is.na(sub$pwr.hdl)==F & sub$pwr.hdl>0.9),
+          !(colnames(sub) %in% c("pwr.ldl",'pwr.tg'))] )
 ```
+
 
 ## LDL-related SNPs
 ```{r, results='markup'}
-kable(sub[sub$rsid %in% ldl.snps & sub$pwr.ldl>0.8 & !(is.na(sub$pwr.ldl)),
+kable(sub[sub$rsid %in% ldl.snps & sub$pwr.ldl>0.9 & !(is.na(sub$pwr.ldl)) & sub$Trait=="LDL",
           !(colnames(sub) %in% c("pwr.hdl",'pwr.tg'))]
       )
 ```
 
 ## TG-related SNPs
 ```{r, results='markup'}
-kable(sub[sub$rsid %in% tg.snps & sub$pwr.tg>0.8 & !(is.na(sub$pwr.tg)), 
+kable(sub[sub$rsid %in% tg.snps & sub$pwr.tg>0.9 & !(is.na(sub$pwr.tg)) & sub$Trait=="TG", 
     !(colnames(sub) %in% c("pwr.ldl",'pwr.hdl'))])
 ```
 
 ## All sufficiently powered SNPs
+
 ```{r, results='markup'}
 
-snp.sig = sub[ (sub$pwr.tg>0.8 & sub$rsid %in% tg.snps | 
-                 sub$pwr.hdl>0.8 & sub$rsid %in% hdl.snps | 
-                 sub$pwr.ldl>0.8 & sub$rsid %in% ldl.snps) & complete.cases(sub),]
+snp.sig = sub[ ((sub$pwr.tg>0.9 & !(is.na(sub$pwr.tg)) & sub$rsid %in% tg.snps & sub$Trait=="TG") | 
+                 (sub$pwr.hdl>0.9 & !(is.na(sub$pwr.hdl)) & sub$rsid %in% hdl.snps & sub$Trait=="HDL") | 
+                 (sub$pwr.ldl>0.9 & !(is.na(sub$pwr.ldl)) & sub$rsid %in% ldl.snps & sub$Trait=="LDL")) ,]
 
+#dim(snp.sig) # 10 by 12
+colnames(snp.sig) = c("rsid", "Author", "Trait",
+                      "Beta", "EAF", "maf",
+                      "power, HDL", "power, LDL", "power, TG",
+                      "Effect allele", "Other allele", "Chr", "generalize to Eur?")
 kable(snp.sig, row.names=F )
+
+#dim(sub) # 235 by 12
 
 # write to a file for later use -- for example, m3 table 4
 setwd("~/GitHub/unc-dissertation-markdown-p2/includes/scripts/paper3")
-save(snp.sig, file="sig-snps.Rdata")
+save(snp.sig, sort., file="sig-snps.Rdata") # snp.sig has the 10 snps for further analysis and sort. has the full list of snps for risk scores.
+
+#table(sort.$Trait)
+names(sort.)
 
 ```
 
@@ -402,18 +469,53 @@ save(snp.sig, file="sig-snps.Rdata")
 # print off table of sign snps with identifying info
 # Export info to .csv file to display in body of proposal.
 
-#head(appa.snps)
-#colnames(appa.snps)
-appa.snps$`Effect allele` = substr(appa.snps$`Effect allele`,1,1)
+#names(sub)
 
-table.sig.snp = appa.snps[(appa.snps$rsid %in% snp.sig$rsid), c("Trait", "rsid", "Author", "Chr", "Effect allele", "beta")]
-nrow(table.sig.snp)
+table.sig.snp = sub[( paste0(sub$rsid, "-", sub$Trait, "-", sub$Author) %in% paste0(snp.sig$rsid, "-", snp.sig$Trait, "-", snp.sig$Author)), 
+                          c("Trait", "rsid", "Author", "Chr", "Effect allele",
+                            "Other allele", "pwr.hdl", "pwr.ldl", "pwr.tg" )]
+#dim(table.sig.snp) # 10 by 9
+#length(unique(table.sig.snp$rsid)) # 10 unique snps
+
+test.1 = table.sig.snp[c("rsid", "Trait")]
+#nrow(unique(test.1)) # 15 unique rsid and trait combo
+
+#kable(table.sig.snp[order(table.sig.snp$rsid),])
+
 write.csv(table.sig.snp,
-          file="~/GitHub/unc-dissertation-markdown/includes/scripts/power/aim3/sig-snp.csv",
+          file="~/GitHub/unc-dissertation-markdown-p2/includes/scripts/power/aim3/sig-snp.csv",
           row.names = F)
+
 #kable(table.sig.snp)
 ```
 
 
+```{r}
+
+# all snps 
+
+names(df.allele)
+maf = df.allele[is.na(df.allele$power.eaf)==F,
+                c( "Trait", "Author",  "rsid", "power.beta", "power.eaf",
+                  "Effect allele", "Other allele", "Chr", "eur")]
+nrow(maf) # 235 left from 252 snps after omitting snps with missing eaf
+all.snps = maf
+
+# write to a file for later use -- for example, m3 table 4
+setwd("~/GitHub/unc-dissertation-markdown-p2/includes/scripts/paper3")
+save(all.snps, file="all-snps.Rdata") # snp.sig has the 10 snps for further analysis and sort. has the full list of snps for risk scores.
+
+# export to csv
+table.snp = sub[, c("Trait", "rsid", "Author", "Chr", "Effect allele",
+                        "Other allele", "pwr.hdl", "pwr.ldl", "pwr.tg" )]
+
+
+write.csv(table.snp,
+          file="~/GitHub/unc-dissertation-markdown-p2/includes/scripts/power/aim3/all-snp.csv",
+          row.names = F)
+
+```
+
+
 # References
-  
+
